<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="search_hint">Find movies here</string>

    <string name="rating">Rating: %s/10 </string>
    <string name="release_date">Release Date : %s </string>
    <string name="texthintpopular">Showing you Popular Movie Right Now!</string>
    <string name="texthintresult">We found %1s movies with query %2s</string>
    <string name="txtupcoming">Upcoming</string>
    <string name="txtnow">Now Playing</string>
    <string name="setting">Setting</string>
    <string name="refresh">Refresh</string>
    <string name="share">Hello this movie is %1s from Muh. Rahmatullah\'s application - Dicoding</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
    <string name="message_daily">Let\'s watch some good movies</string>
    <string name="release_today_msg">%s Release today, don\'t forget to watch it!</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 8 AM</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 7 AM</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="lang_title">Language</string>
    <string name="summary_lang">Select language</string>
    <string name="lang">Language</string>
    <string name="key_lang">key_lang</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="no_item">No Item</string>

</resources>
